K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pilgrimage-project
  namespace: pilgrimage

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-2:845242191149:certificate/de24540f-9c85-4945-a82b-fb9111ea7109
spec:
  ingressClassName: alb
  rules:
  - host: pilgrimage.vijayakrishna.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pilgrimage-project
            port:
              number: 80
